# PKS

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  TESTING.md  build.bat  cmake-build.ps1  compile_commands.json  compile_flags.txt  docker-compose.yml  docker-entrypoint.sh  run_tests.bat  setup-env.ps1  test_unicode.cpp
include/: CSMACDMedium.h  Host.h  IObserver.h  ITrafficGenerationStrategy.h  NetworkVisualizer.h  Node.h  NodeFactory.h  Packet.h  PoissonStrategy.h  Router.h  SimulationConfig.h  SimulationFacade.h  SimulationParameters.h  StatisticsCollector.h  TrafficStrategies.h
src/: CSMACDMedium.cpp  Host.cpp  NetworkVisualizer.cpp  Node.cpp  NodeFactory.cpp  Packet.cpp  PoissonStrategy.cpp  Router.cpp  SimulationFacade.cpp  StatisticsCollector.cpp  TrafficStrategies.cpp  main.cpp
tests/: CMakeLists.txt  unit_tests.cpp
tests/scenarios/: scenario1_simple_transfer.cpp  scenario2_collision.cpp  scenario3_routing.cpp  scenario4_heavy_load.cpp  scenario5_mixed_traffic.cpp  scenario6_network_failure.cpp
